--- a/Hub/Hub/Views/Shared/_Layout.cshtml
+++ b/Hub/Hub/Views/Shared/_Layout.cshtml
@@ -11,8 +11,8 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand">Wibbly O' Wobbly</a>
-                <a class="navbar-brand">Anyád</a>
+                <a class="navbar-brand" href="/Home/Index">Wibbly O' Wobbly</a>
+                <a class="navbar-brand" href="/Login/Index">Login/Register</a>
             </div>
         </div>
     </nav>
